overflow fixes

--- a/pages/_venueStyles.sass
+++ b/pages/_venueStyles.sass
@@ -390,6 +390,7 @@ header #navVenue
         height: 150vh
 
     .venueHeroImage3
+        overflow: auto
         height: 200vh
 
     #heroTextMain 
@@ -417,7 +418,7 @@ header #navVenue
 
         a
             font-size: 0.9em
-
+        
     .overview
         font-size: 0.7em
 
@@ -448,5 +449,7 @@ header #navVenue
         font-size: 0.9em
 
     #formCont
+        max-height: inherit
         label
             font-size: 0.9em
+
